--- a/index.html
+++ b/index.html
@@ -9,25 +9,30 @@
   </head>
   <body>
     <div class="container">
-      <h1>Make a Triangle</h1>
-      <form id="triangle">
-        <div class="form-group">
-          <label for="input1">Length of first side of triangle:</label>
-          <input id="input1" class="form-control" type="text">
-        </div>
-        <div class="form-group">
-          <label for="input2">Length of second side of triangle:</label>
-          <input id="input2" class="form-control" type="text">
-        </div>
-        <div class="form-group">
-          <label for="input3">Length of third side of triangle:</label>
-          <input id="input3" class="form-control" type="text">
-        </div>
+      <div class="jumbotron">
+        <h1>Make a Triangle!</h1>
+        <h3>Input three lengths to see what type of triangle they form.</h3>
+      </div>
 
-        <button type="submit" class="btn">Make a triangle!</button>
-      </form>
-      <div id="output">
+        <form id="triangle">
+          <div class="form-group">
+            <label for="input1">Length of first side of triangle:</label>
+            <input id="input1" class="form-control" type="text">
+          </div>
+          <div class="form-group">
+            <label for="input2">Length of second side of triangle:</label>
+            <input id="input2" class="form-control" type="text">
+          </div>
+          <div class="form-group">
+            <label for="input3">Length of third side of triangle:</label>
+            <input id="input3" class="form-control" type="text">
+          </div>
 
+          <button type="submit" class="btn">Make a triangle!</button>
+        </form>
+        <div id="output">
+
+        </div>
       </div>
     </div>
   </body>
